--- a/slides/index.html
+++ b/slides/index.html
@@ -8,16 +8,13 @@
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
-
-		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+		<link rel="stylesheet" href="dist/theme/vscode.css">
+		<link rel="stylesheet" href="plugin/highlight/vscode.css">
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section data-markdown="markdown.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
 			</div>
 		</div>
 
@@ -25,16 +22,87 @@
 		<script src="plugin/notes/notes.js"></script>
 		<script src="plugin/markdown/markdown.js"></script>
 		<script src="plugin/highlight/highlight.js"></script>
+		<script src="node_modules/reveal.js-menu/menu.js"></script>
 		<script>
-			// More info about initialization & config:
-			// - https://revealjs.com/initialization/
-			// - https://revealjs.com/config/
-			Reveal.initialize({
+			Reveal.initialize( {
+				controls: true,
+				controlsTutorial: true,
+				controlsLayout: 'bottom-right',
+				controlsBackArrows: 'faded',
+				progress: true,
+				slideNumber: false,
+				showSlideNumber: 'all',
+				hashOneBasedIndex: false,
 				hash: true,
-
-				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
-			});
+				respondToHashChanges: true,
+				history: false,
+				keyboard: true,
+				keyboardCondition: null,
+				disableLayout: false,
+				overview: true,
+				center: true,
+				touch: true,
+				loop: false,
+				rtl: false,
+				navigationMode: 'default',
+				shuffle: false,
+				fragments: true,
+				fragmentInURL: true,
+				embedded: false,
+				help: true,
+				pause: true,
+				showNotes: false,
+				autoPlayMedia: null,
+				preloadIframes: null,
+				autoAnimate: true,
+				autoAnimateMatcher: null,
+				autoAnimateEasing: 'ease',
+				autoAnimateDuration: 1.0,
+				autoAnimateUnmatched: true,
+				autoAnimateStyles: [ 'opacity', 'color', 'background-color', 'padding', 'font-size', 'line-height', 'letter-spacing', 'border-width', 'border-color', 'border-radius', 'outline', 'outline-offset' ],
+				autoSlide: 0,
+				autoSlideStoppable: true,
+				autoSlideMethod: null,
+				defaultTiming: null,
+				mouseWheel: false,
+				previewLinks: false,
+				postMessage: true,
+				postMessageEvents: false,
+				focusBodyOnPageVisibilityChange: true,
+				transition: 'slide', 
+				transitionSpeed: 'default', 
+				backgroundTransition: 'fade', 
+				pdfMaxPagesPerSlide: Number.POSITIVE_INFINITY,
+				pdfSeparateFragments: true,
+				pdfPageHeightOffset: -1,
+				viewDistance: 3,
+				mobileViewDistance: 2,
+				display: 'block',
+				hideInactiveCursor: true,
+				hideCursorTime: 5000,
+				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMenu ],
+				menu: {
+					side: 'left',
+					width: 'normal',
+					numbers: false,
+					titleSelector: 'h1, h2, h3, h4, h5, h6',
+					useTextContentForMissingTitles: false,
+					hideMissingTitles: false,
+					markers: true,
+					custom: false,
+					themes: false,
+					themesPath: 'dist/theme/',
+					transitions: false,
+					openButton: true,
+					openSlideNumber: false,
+					keyboard: true,
+					sticky: false,
+					autoOpen: true,
+					delayInit: false,
+					openOnInit: false,
+					loadIcons: true
+				}
+			} );
 		</script>
 	</body>
 </html>
