--- a/slides/index.html
+++ b/slides/index.html
@@ -22,6 +22,7 @@
 		<script src="plugin/notes/notes.js"></script>
 		<script src="plugin/markdown/markdown.js"></script>
 		<script src="plugin/highlight/highlight.js"></script>
+		<script src="plugin/math/math.js"></script>
 		<script src="node_modules/reveal.js-menu/menu.js"></script>
 		<script>
 			Reveal.initialize( 
@@ -104,9 +105,8 @@
 					},
 					katex: {
 						version: 'latest',
-						local: 'node_modules/katex',
 						delimiters: [
-							{left: '$$', right: '$$', display: true},
+							{left: '$$', right: '$$', display: false},
 							{left: '$', right: '$', display: false},
 							{left: '\\(', right: '\\)', display: false},
 							{left: '\\[', right: '\\]', display: true}
