Change styles, break out presentation sections into multiple markdown files

--- a/slides/index.html
+++ b/slides/index.html
@@ -14,7 +14,8 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown="markdown.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
+				<section data-markdown="front-matter.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
+				<section data-markdown="lookup-tables.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
 			</div>
 		</div>
 
