--- a/slides/index.html
+++ b/slides/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+	<base target="_blank">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
