Add GPIO section

--- a/slides/index.html
+++ b/slides/index.html
@@ -17,6 +17,7 @@
 			<div class="slides">
 				<section data-markdown="front-matter.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
 				<section data-markdown="lookup-tables.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
+				<section data-markdown="gpio-configuration.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
 			</div>
 		</div>
 
