--- a/slides/index.html
+++ b/slides/index.html
@@ -18,6 +18,7 @@
 				<section data-markdown="front-matter.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
 				<section data-markdown="lookup-tables.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
 				<section data-markdown="gpio-configuration.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
+				<section data-markdown="lean-stream-io.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
 			</div>
 		</div>
 
