Add placeholder sections in slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -16,9 +16,13 @@
 		<div class="reveal">
 			<div class="slides">
 				<section data-markdown="front-matter.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
-				<section data-markdown="lookup-tables.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
 				<section data-markdown="gpio-configuration.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
+				<section data-markdown="lookup-tables.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
+				<section data-markdown="address-uid.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
 				<section data-markdown="lean-stream-io.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
+				<section data-markdown="arena-allocator.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
+				<section data-markdown="chrono.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
+				<section data-markdown="random.md" data-separator="^---" data-separator-vertical="^--" data-separator-notes="Notes:"></section>
 			</div>
 		</div>
 
