--- a/slides/index.html
+++ b/slides/index.html
@@ -36,7 +36,7 @@
 			Reveal.initialize( 
 				{
 					controls: true,
-					controlsTutorial: true,
+					controlsTutorial: false,
 					controlsLayout: 'bottom-right',
 					controlsBackArrows: 'faded',
 					progress: true,
